# cliRequest

./: .gitignore  README.md  main.py  pyproject.toml
cli_Request/: __init__.py  config.py  log.py  query.py
