[tool.poetry]
name = "cliRequest"
version = "0.1.0"
description = "cli for db"
authors = ["NoxNokas <camelotlanzelot@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
